methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: Boolean does not take parameters
  while(!sawBaggle()){
                  ^